src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>netsuite_conn__Item_Fulfillment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Fulfillment</label>
        <referenceTo>netsuite_conn__Celigo_Item_Fulfillment__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>NetSuite Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Item_Id_Import__c</fullName>
        <label>NetSuite Item Id [Import]</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Item_Name__c</fullName>
        <label>NetSuite Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Pushed_From_NetSuite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pushed From NetSuite</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>